<resources>


    <!-- PAGE Lier Parrain/Filleul => Chercher un parrain / Chercher un filleul -->

    <string name="app_name" translatable="false">Tiers2Confiance</string>
    <string name="Lier_pf_titre_filleul">Chercher son parrain</string>
    <string name="Lier_pf_titre_parrain">Chercher son filleul</string>
    <string name="Lier_pf_pseudo">Saisir son pseudo : </string>

    <!-- Texte boutons -->
    <string name="btn_next">Suivant</string>
    <string name="btn_back">Retour</string>
    <string name="btn_search">Chercher</string>
    <string name="btn_request">Envoyer une demande</string>
    <string name="btn_ok">Valider</string>
    <string name="btn_modify">Modifer</string>
    <string name="btn_save">Sauvegarder</string>
    <string name="btn_delete">Supprimer</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_paid">Payer</string>
    <string name="btn_refuse">Refuser</string>
    <string name="btn_accept">Accepter</string>
    <string name="btn_login">Se connecter</string>
    <string name="btn_sign_up">S\'inscrire</string>
    <string name="btn_reset_password">Mot de passe oublié</string>

    <!-- Texte noms d'Attributs -->
    <string name="lbl_pseudo">Pseudo</string>
    <string name="lbl_mot_de_passe">Mot de passe</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_prenom">Prénom</string>
    <string name="lbl_nom">Nom</string>
    <string name="lbl_date_inscription">Date d\'inscription</string>
    <string name="lbl_date_derniere_connexion">date de dernière connexion</string>
    <string name="lbl_role">Rôle</string>
    <string name="lbl_solde">Solde</string>
    <string name="lbl_celibataire">Célibataire</string>
    <string name="lbl_tiers">Tiers</string>
    <string name="lbl_date_naissance">Date de naissance</string>

    <string name="lbl_code_postal">Code Postal</string>
    <string name="lbl_ville">Ville</string>
    <string name="lbl_presentation">Présentaion</string>
    <string name="lbl_genre_homme">Homme</string>
    <string name="lbl_genre_femme">Femme</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_orientation_sexuelle">Orientation Sexuelle</string>
    <string name="lbl_statut_matrimonial">Statut Matrimonial</string>
    <string name="lbl_enfants">Enfants</string>
    <string name="lbl_profession">Profession</string>

    <string name="lbl_taille">Taille(en cm)</string>
    <string name="lbl_silhouette">Silhouette</string>
    <string name="lbl_ethnie">Ethnie</string>
    <string name="lbl_couleur_cheveux">Couleur des cheveux</string>
    <string name="lbl_longueur_cheveux">Longueur des cheveux</string>
    <string name="lbl_couleur_yeux">Couleur des yeux</string>
    <string name="lbl_fumeur">Fumeur</string>

    <string name="lbl_personnalite">Personnalité</string>
    <string name="lbl_sports">Sports</string>
    <string name="lbl_hobbies">Hobbies</string>
    <string name="lbl_avatar">Avatar</string>
    <string name="lbl_photos">Photos</string>

    <!-- Texte Attributs -->
    <!-- Attribut Role User-->
    <string name="role_celib_text">Célibataire</string>
    <string name="role_parrain_text">Parrain</string>

    <!-- Attribut Sexe User-->
    <string name="sex_male_text">Homme</string>
    <string name="sex_female_text">Femme</string>

    <!-- Attribut Orientation Sexuelle User-->
    <string name="sexual_orientation_hetero_text">Hétérosexuel(le)</string>
    <string name="sexual_orientation_homo_text">Homosexuel(le)</string>
    <string name="sexual_orientation_bi_text">Bisexuel(le)</string>

    <!-- Attribut Statut Matrimonial User-->
    <string name="matrimonial_status_celib_text">Célibataire</string>
    <string name="matrimonial_status_marie_text">Marié(e)</string>
    <string name="matrimonial_status_divorce_text">Divorcé(e)</string>

    <!-- Attribut Oui/Non pour "a des enfants"-->
    <string name="oui_text">Oui</string>
    <string name="non_text">Non</string>

    <!-- Attribut silhouette-->
    <string name="Silhouette_mince_text">Mince</string>
    <string name="Silhouette_Normale_text">Normale</string>
    <string name="Silhouette_petites_rondeurs_text">Petites rondeurs</string>
    <string name="Silhouette_rondeurs_text">Rondeurs</string>
    <string name="Silhouette_fort_text">Fort</string>
    <string name="Silhouette_athletique_text">Athlétique</string>
    <string name="Silhouette_je_le_garde_pour_moi_text">Je le garde pour moi</string>

    <!-- Attribut Ethnie-->
    <string name="ethnie_africain_text">Africain</string>
    <string name="ethnie_arabe_text">Arabe</string>
    <string name="ethnie_asiatique_text">Asiatique</string>
    <string name="ethnie_eurasien_text">Eurasien</string>
    <string name="ethnie_europeen_text">européen</string>
    <string name="ethnie_hispanique_text">Hispanique</string>
    <string name="ethnie_indien_text">Indien</string>
    <string name="ethnie_metis_text">Métis</string>

    <!-- Attribut Couleur Cheveux-->
    <string name="couleur_cheveux_blanc_text">Blanc</string>
    <string name="couleur_cheveux_blond_text">Blond</string>
    <string name="couleur_cheveux_brun_text">Brun</string>
    <string name="couleur_cheveux_chatain_text">Chatain</string>
    <string name="couleur_cheveux_poivreetsel_text">Poivre et sel</string>
    <string name="couleur_cheveux_noir_text">Noir</string>
    <string name="couleur_cheveux_roux_text">Roux</string>

    <!-- Attribut longeur cheveux-->
    <string name="longueur_cheveux_chauve_text">Chauve</string>
    <string name="longueur_cheveux_court_text">Court</string>
    <string name="longueur_cheveux_long_text">Long</string>
    <string name="longueur_cheveux_moyen_text">Moyen</string>

    <!-- Attribut Couleur Yeux-->
    <string name="couleur_yeux_bleu_text">Bleu</string>
    <string name="couleur_yeux_marron_text">Marron</string>
    <string name="couleur_yeux_noir_text">Noir</string>
    <string name="couleur_yeux_vert_text">Vert</string>

    <!-- Attribut Fumeur-->
    <string name="fumeur_oui_text">Fumeur</string>
    <string name="fumeur_non_text">Non fumeur</string>

    <!-- Attribut centres interet/hobbies (ho_)-->
    <string name="ho_artisanat_text">Artisanat</string>
    <string name="ho_balades_text">Balades</string>
    <string name="ho_boites_text">Boites de nuit / danser</string>
    <string name="ho_cafe_text" translatable="false">Café et conversation</string>
    <string name="ho_charites_text">Charités / Organisations</string>
    <string name="ho_clubs_text">Clubs de lecture ou de discussion</string>
    <string name="ho_cuisiner_text">Cuisiner</string>
    <string name="ho_déguster_text">Déguster du vin / des plats</string>
    <string name="ho_fairerencontres_text">Faire de nouvelles rencontres</string>
    <string name="ho_films_text">Films / Cinéma</string>
    <string name="ho_jardiner_text">Jardiner</string>
    <string name="ho_jeuxcartes_text">Jeux de cartes / de famille</string>
    <string name="ho_jeuxvideos_text">Jeux vidéo</string>
    <string name="ho_medepenser_text">Me dépenser</string>
    <string name="ho_musique_text">Musique / Concerts</string>
    <string name="ho_musees_text">Musées / Galeries</string>
    <string name="ho_pecher_text">Pêcher / Chasser</string>
    <string name="ho_regarder_text">Regarder le sport</string>
    <string name="ho_religion_text">Religion / Spirituel</string>
    <string name="ho_restaurant_text">Restaurant / Recevoir à diner</string>
    <string name="ho_shopping_text" translatable="false">Shopping / Antiquaires</string>
    <string name="ho_theatre_text" translatable="false">Théâtre / Spectacles</string>
    <string name="ho_voyages_text" translatable="false">Voyages / Tourisme</string>


    <!-- Attribut xxxxxxx-->
    <string name="XXXXXX" translatable="false">xxxxxx</string>
    <string name="accepter_demande">Accepter une demande</string>
    <string name="title_activity_menu">Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- String pour la decription pour l'aide aux déficients visuels   -->
    <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
    <string name="navigation_drawer_close">Fermer le menu de navigation</string>
    <string name="getImageGallery">Importer Gallerie</string>
    <string name="getImageCamera">Importer depuis Caméra</string>

    <!-- Page Login-->
    <string name="dont_have_account">Pas encore inscrit ?</string>

    <!-- Page SignUp -->
    <string name="repeter_mot_de_passe">Repeter mot de passe</string>

    <!-- Page RoleChoice -->
    <string name="choose_role">Choisi ton rôle :</string>
    <!-- Page creation de profil -->
    <string name="creer_profil">Creer profil</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="lbl_ans">ans</string>
    <string name="btn_edit_user">Mofidier son profil</string>
    <string name="btn_credit_nephew">Créditer son filleul</string>
    <string name="btn_dont_be_his_godfather_anymore">Ne plus être son parrain</string>
    <string name="btn_send_profile_to_nephew">Envoyer ce profil à mon filleul</string>
    <string name="btn_accept_being_godfather">Accepter d\'être son parrain</string>
    <string name="btn_apply_being_godfather">Demander d\'être son parrain</string>
    <string name="btn_dont_be_nephew_anymore">Ne plus être son filleul</string>
    <string name="btn_accept_match">Accepter le match</string>
    <string name="btn_reject_match">Refuser le match</string>
    <string name="btn_apply_as_nephew">Demander à être son filleul</string>
    <string name="btn_accept_being_nephew">Accepter d\'être son filleul</string>

    <!-- String pour la decription des notifications   -->
    <string name="lbl_demande_parrainage_recu">Demande de parrainage reçue</string>
    <string name="lbl_demande_parrainage_recu_body">Un célibataire vous de demande de le parrainer</string>
    <string name="lbl_parrainage_supprime">Plus de parrain!</string>
    <string name="lbl_parrainage_supprime_body">Vous n\'avez plus de parrain, trouvez en un autre pour continuer à utiliser l\'application.</string>
    <string name="lbl_envoi_profil">Un match ?</string>
    <string name="lbl_envoi_profil_body">Votre parrain vous envoi un profil !</string>
    <string name="lbl_demande_parrainage_acceptee">Parrain trouvé!</string>
    <string name="lbl_demande_parrainage_acceptee_body">Votre demande de parrainage a été accepté</string>
    <string name="lbl_filiation_supprime">Plus de filleul</string>
    <string name="lbl_filiation_supprime_body">Votre filleul a supprimé votre lien de parrainage</string>
    <string name="lbl_demande_parrainage_envoyee">Demande de parrainage</string>
    <string name="lbl_demande_parrainage_envoyee_body">Un célibataire souhaiterait être parrainer par vous</string>
    <string name="lbl_parrainage_accepte">Parrainage accepté</string>
    <string name="lbl_parrainage_accepte_body">" a accepté votre demande de parrainage"</string>
    <string name="lbl_match">Un Match!</string>
    <string name="lbl_match_body">Vous avez un match, rendez-vous dans les conversations pour discuter!</string>
    <string name="lbl_match_pending">Un match en attente!</string>
    <string name="lbl_match_pending_body">Acceptez la proposition pour entrer en contact</string>

</resources>