<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Login.CreationProfilActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/cardView"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/cardView"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">


            <EditText
                android:id="@+id/et_creation_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/lbl_nom"
                android:inputType="textPersonName"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/et_creation_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/lbl_prenom"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_creation_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/lbl_pseudo"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/lbl_genre" />

            <RadioGroup
                android:id="@+id/radio_group_genre"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="41dp">

                <RadioButton
                    android:id="@+id/rb_homme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:onClick="radioButtonGender"
                    android:text="@string/lbl_genre_homme"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb_femme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:onClick="radioButtonGender"
                    android:text="@string/lbl_genre_femme"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>


            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/lbl_date_naissance"
                android:minHeight="48dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_creation_code_postal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/lbl_code_postal"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_creation_ville"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/lbl_ville"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btn_creation_profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:backgroundTint="@color/btnParrain"
                android:onClick="creationUser"
                android:text="@string/creer_profil"
                android:theme="@style/Theme.Tiers2Confiance" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>